# KYC-Agent

./: Dockerfile  README.md  api.py  app.py  pyproject.toml  requirements.txt  tool.py
src/kyc_agent/: crew.py  main.py
src/kyc_agent/config/: agents.yaml  tasks.yaml
src/kyc_agent/tools/: custom_tool.py
