[project]
name = "kyc_agent"
version = "0.1.0"
description = "kyc-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
kyc_agent = "kyc_agent.main:run"
run_crew = "kyc_agent.main:run"
train = "kyc_agent.main:train"
replay = "kyc_agent.main:replay"
test = "kyc_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
